Terminal Launch Option (Windows)
^